Fix: add body min-width of fit-content to fix issue with content size on mobile

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -28,12 +28,12 @@ body {
     font-family: 'Libre Franklin', sans-serif;
     font-size: 1.1rem;
     color: var(--color-tertiary);
+    min-width: fit-content;
 }
 
 section {
     min-height: 100vh;
-    width: 100%;
-    //padding: 3rem 18rem;  
+    min-width: 100vw; 
 }
 
 nav {
@@ -126,6 +126,7 @@ li::marker {
     }
 }
 
+/* Dark Mode Button */
 .theme-btn {
     display: flex;
     justify-content: center;
@@ -155,7 +156,7 @@ li::marker {
 header {
     height: 100vh;
     color: var(--color-tertiary);
-    overflow: hidden;
+    //overflow: hidden;
 } 
 
 .header-content {
@@ -331,6 +332,7 @@ header {
             border-radius: 10px;
             width: 100%;
             box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+            padding: 10px 20px;
         }
         .tl-title {
             text-align: center;
